force-app/main/default/objects/PGFField__c/PGFField__c.object-meta.xml
<CustomObject>
    <description>Fields metadata object for framework.</description>
    <label>Field</label>
    <nameField>
        <label>FB_Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>