force-app/main/default/objects/PGFField__c/fields/Copy_Options__c.field-meta.xml
<CustomField>
    <fullName>Copy_Options__c</fullName>
    <label>Copy Options</label>
    <length>50768</length>
    <type>LongTextArea</type>
</CustomField>