force-app/main/default/objects/PGFField__c/fields/CSSClasses__c.field-meta.xml
<CustomField>
    <fullName>CSSClasses__c</fullName>
    <label>CSS Classes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>