force-app/main/default/objects/PGFField__c/fields/Field_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Field_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Field External Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>