force-app/main/default/objects/PGFField__c/fields/FieldValue__c.field-meta.xml
<CustomField>
    <fullName>FieldValue__c</fullName>
    <label>FieldValue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>