force-app/main/default/objects/PGFField__c/fields/ObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>ObjectAPIName__c</fullName>
    <description>Object API name</description>
    <label>ObjectAPIName</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>CLQ_Program__c</fullName>
            </value>
            <value>
                <fullName>CLQ_Program_Transaction__c</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>CLQ_Role__c</fullName>
            </value>
            <value>
                <fullName>CLQ_Facility_Schedule__c</fullName>
            </value>
            <value>
                <fullName>CLQ_Room_Space__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>