force-app/main/default/objects/PGFField__c/fields/ObjectRecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>ObjectRecordTypeId__c</fullName>
    <description>Object Record Type Id</description>
    <label>Object Record Type Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>