force-app/main/default/objects/PGFField__c/fields/Page_Id__c.field-meta.xml
<CustomField>
    <fullName>Page_Id__c</fullName>
    <formula>Parent__r.Parent__r.Parent__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Page Id</label>
    <type>Text</type>
</CustomField>