force-app/main/default/objects/PGFField__c/fields/Pattern_Mismatch_Message__c.field-meta.xml
<CustomField>
    <fullName>Pattern_Mismatch_Message__c</fullName>
    <label>Pattern Mismatch Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>