force-app/main/default/objects/PGFField__c/fields/ReadOnly__c.field-meta.xml
<CustomField>
    <fullName>ReadOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Read-Only</description>
    <label>Read-Only</label>
    <type>Checkbox</type>
</CustomField>