force-app/main/default/objects/PGFField__c/fields/Validator__c.field-meta.xml
<CustomField>
    <fullName>Validator__c</fullName>
    <description>UI Validation</description>
    <label>Validator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>SSN</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Text-Only</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Zip</fullName>
            </value>
            <value>
                <fullName>PhoneExtn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>