force-app/main/default/objects/PGFField__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Label__c</columns>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Validator__c</columns>
    <columns>Required__c</columns>
    <columns>ReadOnly__c</columns>
    <columns>ObjectAPIName__c</columns>
    <columns>Parent__c</columns>
    <columns>SubSection_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>