force-app/main/default/objects/PGFField__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Validator__c</columns>
    <columns>Label__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>