force-app/main/default/objects/PGFField__c/listViews/Standard_Object_Fields.listView-meta.xml
<ListView>
    <fullName>Standard_Object_Fields</fullName>
    <columns>NAME</columns>
    <columns>ObjectAPIName__c</columns>
    <columns>Page_Id__c</columns>
    <columns>ReadOnly__c</columns>
    <columns>Required__c</columns>
    <columns>Validator__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ObjectAPIName__c</field>
        <operation>equals</operation>
        <value>Contact</value>
    </filters>
    <label>Standard Object Fields</label>
</ListView>